tests/NormalTests/paczka1/small_fuzzy/63599445.err
Error in line 4: 4f3u A495 61,3
Error in line 9: 4f3u A576 8,0
